--- a/views/xml/StudentPersonal.tt
+++ b/views/xml/StudentPersonal.tt
@@ -1,4 +1,4 @@
-<StudentPersonal RefId="[% entry.RefId %]"> 
+<StudentPersonal RefId="[% entry.RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
   <LocalId>[% entry.LocalId %]</LocalId>  
   <PersonInfo>     
     <Name Type="LGL">       
