--- a/views/xml/TeachingGroup.tt
+++ b/views/xml/TeachingGroup.tt
@@ -1,4 +1,4 @@
-<TeachingGroup RefId="[% entry.RefId %]">
+<TeachingGroup RefId="[% entry.RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
   <SchoolYear>[% entry.SchoolYear %]</SchoolYear>
   <SchoolInfoRefId>[% entry.SchoolInfo_RefId %]</SchoolInfoRefId>
   <LocalId>[% entry.LocalId %]</LocalId>
