--- a/views/xml/Alert.tt
+++ b/views/xml/Alert.tt
@@ -1,4 +1,4 @@
-<alert id="[% entry.id %]" alertLevel="[% entry.alert %]">
+<alert id="[% entry.id %]" alertLevel="[% entry.alert %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	<reporter></reporter>
 	<cause></cause>
 	<message></message>
