--- a/views/xml/RoomInfo.tt
+++ b/views/xml/RoomInfo.tt
@@ -1,4 +1,4 @@
-<RoomInfo RefId="[% entry.RefId %]" SchoolInfoRefId="[% entry.SchoolInfo_RefId %]">
+<RoomInfo RefId="[% entry.RefId %]" SchoolInfoRefId="[% entry.SchoolInfo_RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
    <RoomNumber>[% entry.RoomNumber %]</RoomNumber>
    <Description>[% entry.Description | html %]</Description>  
    <Capacity>[% entry.Capacity %]</Capacity>
