--- a/views/xml/RoomInfos.tt
+++ b/views/xml/RoomInfos.tt
@@ -1,4 +1,4 @@
-<RoomInfos>
+<RoomInfos xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/RoomInfo.tt' %]
 	[% END %]
