--- a/views/xml/SchoolInfo.tt
+++ b/views/xml/SchoolInfo.tt
@@ -1,4 +1,4 @@
-<SchoolInfo RefId="[% entry.RefId %]">
+<SchoolInfo RefId="[% entry.RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	<LocalId>[% entry.LocalId %]</LocalId>  
 	<SchoolName>[% entry.SchoolName %]</SchoolName>  
 </SchoolInfo>
