--- a/views/xml/SchoolInfos.tt
+++ b/views/xml/SchoolInfos.tt
@@ -1,4 +1,4 @@
-<SchoolInfos>
+<SchoolInfos xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/SchoolInfo.tt' %]
 	[% END %]
