--- a/views/xml/StaffPersonals.tt
+++ b/views/xml/StaffPersonals.tt
@@ -1,4 +1,4 @@
-<StaffPersonals>
+<StaffPersonals xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/StaffPersonal.tt' %]
 	[% END %]
