--- a/views/xml/StudentPersonals.tt
+++ b/views/xml/StudentPersonals.tt
@@ -1,4 +1,4 @@
-<StudentPersonals>
+<StudentPersonals xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/StudentPersonal.tt' %]
 	[% END %]
