--- a/views/xml/TeachingGroups.tt
+++ b/views/xml/TeachingGroups.tt
@@ -1,4 +1,4 @@
-<TeachingGroups>
+<TeachingGroups xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/TeachingGroup.tt' %]
 	[% END %]
