--- a/views/xml/TimeTableCell.tt
+++ b/views/xml/TimeTableCell.tt
@@ -1,4 +1,4 @@
-<TimeTableCell RefId="[% entry.RefId %]">
+<TimeTableCell RefId="[% entry.RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
   <TimeTableRefId>[% entry.TimeTable_RefId %]</TimeTableRefId>
   <TimeTableSubjectRefId>[% entry.TimeTableSubject_RefId %]</TimeTableSubjectRefId>
   <TeachingGroupRefId>[% entry.TeachingGroup_RefId %]</TeachingGroupRefId>
