--- a/views/xml/TimeTableCells.tt
+++ b/views/xml/TimeTableCells.tt
@@ -1,4 +1,4 @@
-<TimeTableCells>
+<TimeTableCells xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/TimeTableCell.tt' %]
 	[% END %]
