--- a/views/xml/TimeTableSubjects.tt
+++ b/views/xml/TimeTableSubjects.tt
@@ -1,4 +1,4 @@
-<TimeTableSubjects>
+<TimeTableSubjects xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/TimeTableSubject.tt' %]
 	[% END %]
