--- a/views/xml/TimeTables.tt
+++ b/views/xml/TimeTables.tt
@@ -1,4 +1,4 @@
-<TimeTables>
+<TimeTables xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
 	[% FOREACH entry = data %]
 		[% INCLUDE 'xml/TimeTable.tt' %]
 	[% END %]
