Proper XML output subjects

--- a/views/xml/TimeTableSubject.tt
+++ b/views/xml/TimeTableSubject.tt
@@ -1,5 +1,5 @@
 <TimeTableSubject RefId="[% entry.RefId %]" xmlns="http://www.SIFinfo.org/au/datamodel/1.3">
-	<AcademicYear>[% entry.AcademicYear %]</AcademicYear>
+	<AcademicYear><Code>[% entry.AcademicYear %]</Code></AcademicYear>
 	<Faculty>[% entry.Faculty %]</Faculty>
 	[%# NOTE: Are these supposed to come from here or another Subject object %]
 	<SubjectLocalId>[% entry.SubjectLocalId %]</SubjectLocalId>
